test/test_suite/errors/bitshift_failable.c3
func void test()
{
    int! x = 0;
    int! z = x << 100; // #error: shift exceeds bitsize of 'int'
}